--- a/Makefile.in
+++ b/Makefile.in
@@ -69,20 +69,20 @@ clean :
 	@rm -f $(SRC)/xml6_*%O% $(SRC)/dom%O% $(SRC)/domXPath%O% resources/libraries/*%LIB-NAME%
 
 realclean : clean
-	@rm -f README.md Makefile docs/*.md docs/*/*.md
+	@rm -f Makefile docs/*.md docs/*/*.md
 
-doc : README.md docs/Attr.md docs/Attr/Map.md docs/CDATA.md docs/Comment.md docs/Config.md docs/Document.md docs/DocumentFragment.md\
+doc : docs/index.md docs/Attr.md docs/Attr/Map.md docs/CDATA.md docs/Comment.md docs/Config.md docs/Document.md docs/DocumentFragment.md\
       docs/Dtd.md docs/Element.md docs/Enums.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/Native.md\
       docs/Node.md docs/Node/List.md docs/Node/Set.md docs/PI.md docs/RelaxNG.md docs/Text.md docs/Pattern.md\
       docs/Parser.md docs/PushParser.md docs/RegExp.md docs/Reader.md docs/Schema.md docs/XPath/Context.md docs/XPath/Expression.md
 
-README.md : lib/LibXML.rakumod
+docs/index.md : lib/LibXML.rakumod
 	(\
 	    echo '[![Build Status]($(TRAVIS).svg?branch=master)]($(TRAVIS))'; \
             echo '';\
-            perl6 -I . --doc=Markdown lib/LibXML.rakumod \
+            perl6 -I . --doc=Markdown $< \
             | raku -p -n etc/resolve-links.raku \
-        ) | tee docs/index.md > README.md
+        ) > $@
 
 docs/%.md : lib/LibXML/%.rakumod
 	raku -I . --doc=Markdown $< \
