add 'zef build' to CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
           # install and test if need be (includes [test-depends])
           sudo apt-get install -y libxml2-dev
           zef install --deps-only .
+          zef build .
           zef install --/test App::Prove6
       - name: Run Tests
         run: prove6 -l t
