documenting/fine-tuning DOM interface

--- a/Makefile.in
+++ b/Makefile.in
@@ -85,7 +85,7 @@ realclean : clean
 	@rm -f Makefile docs/*.md docs/*/*.md
 
 doc : docs/index.md docs/Attr.md docs/Attr/Map.md docs/CDATA.md docs/Comment.md docs/Config.md docs/Dict.md docs/Document.md docs/DocumentFragment.md\
-      docs/Dtd.md docs/Element.md docs/Enums.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
+      docs/Dtd.md docs/DOM.md docs/Element.md docs/Enums.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
       docs/Node.md docs/Node/List.md docs/Node/Set.md docs/PI.md docs/RelaxNG.md docs/Text.md docs/Pattern.md\
       docs/Parser.md docs/PushParser.md docs/RegExp.md docs/Reader.md docs/Schema.md\
       docs/XPath/Context.md docs/XPath/Expression.md\
@@ -101,6 +101,11 @@ docs/index.md : lib/LibXML.rakumod
         ) > $@
 
 docs/%.md : lib/LibXML/%.rakumod
+	raku -I . --doc=Markdown $< \
+	| TRAIL=LibXML/$* raku -p -n etc/resolve-links.raku \
+        > $@
+
+docs/%.md : lib/LibXML/%.pod6
 	raku -I . --doc=Markdown $< \
 	| TRAIL=LibXML/$* raku -p -n etc/resolve-links.raku \
         > $@
