renamed dependency DOM -> W3C::DOM

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           # install and test if need be (includes [test-depends])
           # run against DOM blead
-          (git clone https://github.com/libxml-raku/DOM-raku && cd DOM-raku && zef install .)
+          (git clone https://github.com/libxml-raku/W3C-DOM-raku && cd W3C-DOM-raku && zef install .)
           sudo apt-get install -y libxml2-dev
           zef install --deps-only .
           zef build .
