rename class LibXML::Entity -> LibXML::Dtd::Entity

--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ realclean : clean
 	@rm -f Makefile docs/*.md docs/*/*.md
 
 doc : docs/index.md docs/Attr.md docs/Attr/Map.md docs/CDATA.md docs/Comment.md docs/Config.md docs/Dict.md docs/Document.md docs/DocumentFragment.md\
-      docs/Dtd.md docs/Dtd/AttrDecl.md docs/Dtd/ElementDecl.md docs/Dtd/Notation.md docs/DOM.md docs/Element.md docs/Enums.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
+      docs/Dtd.md docs/Dtd/AttrDecl.md  docs/Dtd/Entity.md docs/Dtd/ElementDecl.md docs/Dtd/Notation.md docs/DOM.md docs/Element.md docs/Enums.md docs/EntityRef.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
       docs/Node.md docs/Node/List.md docs/Node/Set.md docs/PI.md docs/RelaxNG.md docs/Text.md docs/Pattern.md\
       docs/Parser.md docs/PushParser.md docs/RegExp.md docs/Reader.md docs/Schema.md\
       docs/XPath/Context.md docs/XPath/Expression.md\
