--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           raku-version: ${{ matrix.raku-version }}
       - name: Linux specific setup
-        if: contains(matrix.os, 'unbuntu')
+        if: contains(matrix.os, 'ubuntu')
         run: sudo apt-get install -y libxml2-dev
       - name: macOS specific setup
         if: contains(matrix.os, 'macOS')
@@ -35,6 +35,7 @@ jobs:
             brew install libxml2
       - name: Install Dependencies
         run: |
+          zef install --/test LibraryMake
           zef install --deps-only .
           zef build .
           zef install --/test App::Prove6
