--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           zef build .
           zef install --/test App::Prove6
       - name: Run Tests
-        if: !(contains(matrix.os, 'windows') && !contains(matrix.raku, 'latest'))
+        if: ${{ !(contains(matrix.os, 'windows') && !contains(matrix.raku, 'latest')) }}
         run: prove6 -I. t
       - name: Install Module
         run: zef install --verbose .
