--- a/dist.ini
+++ b/dist.ini
@@ -4,3 +4,5 @@ name = LibXML
 [ReadmeFromPod]
 ; if you want to disable generating README.md from main module's pod, then:
 disable = true
+
+[UploadToZef]
