--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
         raku-version:
           - 'latest'
           - '2021.08'
+        exclude:
+           os: windows-2019
+           raku-version: '2021.08'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
