--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           - 'latest'
           - '2021.08'
         exclude:
-           os: windows-2019
+         - os: windows-2019
            raku-version: '2021.08'
     runs-on: ${{ matrix.os }}
     steps:
