--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-##          - windows-2019
+          - windows-2019
         raku-version:
           - 'latest'
           - '2021.12'
