--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,13 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-          - windows-2019
+         # - windows-2019
         raku-version:
           - 'latest'
           - '2021.12'
         exclude:
           - os: windows-2019
-            raku-version: '2021.08'
+            raku-version: '2021.12'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
