--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install Dependencies
         run: |
           zef install --/test LibraryMake
-          zef install --deps-only .
+          zef install --deps-only --test-depends .
           zef build .
           zef install --/test App::Prove6
       - name: Run Tests
