--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ realclean : clean
 	@rm -f Makefile docs/*.md docs/*/*.md
 
 Pod-To-Markdown-installed :
-	@raku -M Pod::To::Markdown -e';'
+	@raku -M Pod::To::Markdown -c
 
 doc : Pod-To-Markdown-installed docs/index.md docs/Attr.md docs/Attr/Map.md docs/CDATA.md docs/Comment.md docs/Config.md docs/Dict.md docs/Document.md docs/DocumentFragment.md\
       docs/Dtd.md docs/Dtd/AttrDecl.md  docs/Dtd/Entity.md docs/Dtd/ElementDecl.md docs/Dtd/Notation.md docs/Dtd/ElementContent.md docs/DOM.md docs/Element.md docs/Enums.md docs/EntityRef.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
@@ -96,7 +96,8 @@ doc : Pod-To-Markdown-installed docs/index.md docs/Attr.md docs/Attr/Map.md docs
       docs/Parser.md docs/PushParser.md docs/RegExp.md docs/Reader.md docs/Schema.md\
       docs/XPath/Context.md docs/XPath/Expression.md\
       docs/SAX/Handler/SAX2.md docs/SAX/Handler/XML.md\
-      docs/SAX/Builder.md docs/Threads.md
+      docs/SAX/Builder.md docs/Threads.md\
+      docs/_CharacterData.md
 
 docs/index.md : lib/LibXML.rakumod
 	(\
