--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,6 @@ name = LibXML
 
 [ReadmeFromPod]
 ; if you want to disable generating README.md from main module's pod, then:
-disable = true
+enabled = false
 
 [UploadToZef]
